--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@zxing/browser": "^0.1.4",
     "@zxing/library": "^0.20.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
