--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@zxing/browser": "^0.1.4",
     "@zxing/library": "^0.20.0",
     "axios": "^1.4.0",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
