--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+index1.html
+index2.html
+index4.html
+index7.html
+index8.html
+index9.html
+index11.html
+barcodes.json
