feat: files modified

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 nutrition_api.txt
-
+.env
+index1.html
+index2.html
+index4.html
+index7.html
+index8.html
+index9.html
+index11.html
+barcodes.json
 
 # Logs
 logs
@@ -25,11 +33,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-index1.html
-index2.html
-index4.html
-index7.html
-index8.html
-index9.html
-index11.html
-barcodes.json
